# oidc-role-manager

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pulumi.yaml  README.md  cli.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: CROSS_ACCOUNT_AUTH.md
oidc_role_manager/: __init__.py  config_loader.py  constants.py  iam_resources.py  pulumi_manager.py
roles/: .gitkeep
roles/examples/123456789012/DeployToStaging/: details.json  inline-CustomPolicy.json  managed-policies.json
scripts/: cross-account-deploy.sh
tests/: __init__.py  test_cli.py  test_config_loader.py  test_constants.py  test_cross_account_script.py  test_iam_resources.py  test_pulumi_manager.py
